fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ background-image:url(./assets/elements/tile-Background2.jpeg);
     background-color: rgb(185, 225, 224);
     box-shadow: 7px 7px 8px;
     
-    
 }
 
 .home-btn strong, .about-btn strong {
@@ -108,12 +107,18 @@ main h1 {
     opacity: 9;
     border-radius: 10px;
     box-shadow: 20px 20px 20px;
+    padding: 10px;
 
 }
 
 .select-quotes-aside p {
-    color: yellow;
+    padding: 10px;
+    border-radius: 10px;
+        background-color: rgb(185, 225, 224);
+        color: rgb(88, 17, 17);
+        box-shadow: 7px 7px 8px;
     text-decoration: underline;
+    opacity: .65;
 }
 
 #imageOptions{
@@ -137,6 +142,7 @@ main h1 {
 }
 
 .footer h1{
+    padding: 20px;
     color: white;
 }
 
@@ -149,6 +155,20 @@ margin-left: 20px;
     font-size: 15px;
         font-family: 'Trebuchet';
         color: rgb(187, 77, 77);
+}
+
+a :hover {
+    background-color: black;
+}
+
+::-webkit-scrollbar{
+    background-image: linear-gradient(to bottom, rgb(50, 139, 150),
+            rgba(112, 189, 190, 0.64));
+}
+
+::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(to bottom, rgba(90, 10, 37, 0.849), rgba(187, 77, 77, 0.791));
+    border-radius: 10px;
 }
 
 
